# opencl-study

./: .gitignore  CMakeLists.txt
src/: main.cpp
src/01 opecl_device_test/: 01.cpp
src/02 vector_add/: 02.cpp  add_kernal.cl  kernel_add.cpp  kernel_add.h
src/03 histogram/: 03.cpp  kernel.cl  kernel_histogram.cpp
src/04 image_roation/: 04.cpp  kernel_rotation.cpp  kernel_rotation.h
src/common/: timer.cpp  timer.h
src/common/opencl-warpper/: kernel.hpp  kernel_warpper.cpp  kernel_warpper.h  opencl.hpp
third/OpenCL/: CMakeLists.txt
third/OpenCL/cmake/Dependencies/whereami/: whereami.cmake
third/OpenCL/samples/core/: CMakeLists.txt
